# perfmap

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTEXT.md  IDEAS.md  README.md  considerations.md  slideshow.txt
.github/agents/: benchmark-maintainer.agent.md  ci-sheriff.agent.md  docs-workshop.agent.md
.github/workflows/: benchmarks.yml  ci.yml
bench/: benchmark_support.h  hash_map_bench.cc  trace_workload_bench.cc  tradeoffs_bench.cc  workload_trace.h
bench/baselines/default/: manifest.json  perfmap_bench.json  perfmap_trace_bench.json  perfmap_tradeoffs.json  thresholds.json
bench/workloads/: README.md  batch_metadata_enrichment.csv  graph_traversal_scratch.csv  hotset_phase_shift.csv  request_dedup_enrichment.csv
dashboard/: app.js  index.html  styles.css
docs/: BENCHMARK_PIPELINE.md  DASHBOARD.md  DESIGN.md  FULL_IMPLEMENTATION_PROMPT.md  IDEAS.md  MEMORY_METRICS.md  PROJECT_STORY.md  RESULTS.md  WORKLOADS.md  questionsformyself.
include/perfmap/: hash_map.h  indirect_hash_map.h  learningprompt.md  map_adapters.h  memory_metrics.h  scratch_hash_map.h  scratch_indirect_hash_map.h
scripts/: benchmark_lib.py  compare_benchmarks.py  dashboard_server.py  generate_benchmark_report.py  generate_workload_fixtures.py  run_benchmarks.py  update_baseline.py
starter/perfmap-10d/: README.md
tests/: hash_map_contract_test.cc  hash_map_test.cc  memory_metrics_test.cc  scratch_hash_map_test.cc  scratch_indirect_hash_map_test.cc
workshop/: WORKSHOP_STATUS.md  build_deck.sh  generate_assets.py  perfmap_workshop_deck.md  perfmap_workshop_deck.pptx  presentation_script.md
